<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/selector_btn_contact"
    tools:context="com.groep4.mindfulness.fragments.ContactInfo">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="123dp">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="16dp"
            android:text="@string/praktijk_psychologen"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/telNr"
            android:layout_width="119dp"
            android:layout_height="25dp"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="8dp"
            android:text="@string/telefoon"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/adress"
            android:layout_width="131dp"
            android:layout_height="38dp"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="4dp"
            android:text="@string/adress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/telNr" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uren_dag"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="132dp"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="12dp"
            android:text="@string/dag"
            app:layout_constraintStart_toEndOf="@+id/telNr"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="4dp"
            android:text="@string/gesloten_op_zondag"
            app:layout_constraintStart_toEndOf="@+id/telNr"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>
