<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_verticaal_margin"
    android:paddingLeft="@dimen/activity_horizontaal_margin"
    android:paddingRight="@dimen/activity_horizontaal_margin"
    android:paddingTop="@dimen/activity_verticaal_margin"
    android:background="@mipmap/trianglify_01"
    >


    <ImageView
        android:contentDescription="@string/logo"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/logoView"
        android:src="@mipmap/logo"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />



    <com.groep4.mindfulness.views.LogoTextView
        android:id="@+id/tv_mindfulness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_below="@+id/logoView"
        android:gravity="center"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:text="@string/app_name"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="45sp" />

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_mindfulness"
        android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rond_edittext"
            style="@style/inputText"
            android:cursorVisible="true"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:singleLine="true"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText


            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignLeft="@+id/email"
            android:layout_alignStart="@+id/email"
            android:layout_below="@+id/email"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rond_edittext"
            style="@style/inputText"
            android:cursorVisible="true"
            android:hint="@string/prompt_paswoord"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="18sp" />

    </android.support.design.widget.TextInputLayout>

    </LinearLayout>
    <Button
        android:id="@+id/email_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/action_login"
        android:textStyle="bold"
        android:background="@drawable/rond_edittext"
        style="@style/inputTextPrimary"
        android:layout_below="@+id/email_login_form"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/email_sign_in_facebook_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/action_login_facebook"
        android:textStyle="bold"
        android:background="@drawable/rond_edittext"
        style="@style/inputTextFacebook"
        android:layout_below="@+id/email_sign_in_button"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        android:textAllCaps="false"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/registreer"
        android:layout_below="@id/email_sign_in_facebook_button"
        android:gravity="center"
        android:layout_marginTop="20dp"
        />

</RelativeLayout>