<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/root_sessies"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@android:color/white"
tools:context=".activities.ActivitySessies">

<LinearLayout
    android:id="@+id/ll_reminders"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPink">

        <!-- Custom TextView gebruikt om custom font te kunnen gebruiken -->
        <ImageView
            android:id="@+id/iv_reminders"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:contentDescription="@string/reminder"
            android:paddingTop="3dp"
            android:scaleType="fitCenter"
            android:tint="@android:color/white"
            app:srcCompat="@mipmap/reminders" />

        <TextView
            android:id="@+id/tv_reminders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_weight="3"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:text="@string/reminder"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="40sp" />
    </TableRow>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="45dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:text="@string/reminderInhoud"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/PickReminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:hint="@string/kies_tijdstip"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</LinearLayout>
</android.support.constraint.ConstraintLayout>