<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/trianglify_01">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top|center"
        android:orientation="vertical">

        <TableRow
            android:id="@+id/tr_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark">

            <!-- Custom TextView gebruikt om custom font te kunnen gebruiken -->

            <TextView
                android:id="@+id/tv_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="3"
                android:text="@string/sessies"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold" />
        </TableRow>

        <TextView
            android:id="@+id/tv_reminder_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/reminderInhoud"
            android:textColor="@color/text_shadow"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tv_reminder_timepicker"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/kies_tijdstip"
            android:textAllCaps="false"
            android:textColor="@color/text_shadow"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/sw_reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginBottom="75dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="Herinnering aanzetten"
            android:textColor="@color/text_shadow"
            android:textSize="20sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>