<?xml version="1.0" encoding="UTF-8"?>

    <android.support.constraint.ConstraintLayout
    tools:context=".activities.MainActivity"
    android:background="@mipmap/trianglify_01"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay"/>


    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center">


    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:gravity="top|center"
        android:layout_gravity="center">

    <ImageView
        android:layout_height="match_parent"
        android:layout_width="60dp"
        android:id="@+id/iv_logo"
        app:srcCompat="@mipmap/logo"
        android:scaleType="fitCenter"
        android:contentDescription="@string/logo"
        android:layout_weight="1"/>

    <com.groep4.mindfulness.views.LogoTextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/tv_mindfulness"
        android:gravity="center"
        android:layout_weight="1"
        android:textSize="45sp"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:text="@string/app_name"
        android:shadowRadius="2"
        android:shadowDy="1"
        android:shadowDx="1"
        android:shadowColor="@color/text_shadow"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"/>

</LinearLayout>

        <TextView
            android:id="@+id/tv_quote"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:padding="5dp"
            android:text=""
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:autoSizeTextType="uniform"
            android:background="@color/colorFacebook" />


    <TableLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:layout_weight="0">


    -<TableRow
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:gravity="center_horizontal">

    <!-- (android:background) Custom Selector gebruikt om verschillende states van de imagebuttons waar te kunnen nemen (kleurschakelingen)-->


    <!-- Button Sessies -->



    <LinearLayout
        android:background="@drawable/selector_btn_sessies"
        android:layout_height="135dp"
        android:layout_width="135dp"
        android:id="@+id/ll_sessies"
        android:orientation="vertical"
        android:gravity="center"
        android:focusable="true"
        android:clickable="true"
        android:layout_margin="10dp">

    <ImageButton
        android:background="@android:color/transparent"
        android:layout_height="80dp"
        android:layout_width="match_parent"
        android:id="@+id/ib_sessies"
        android:scaleType="fitCenter"
        android:contentDescription="@string/sessies"
        android:layout_marginTop="20dp"
        android:clickable="false"
        android:tint="@android:color/white"
        android:src="@mipmap/sessies"
        android:padding="10dp"
        android:longClickable="false"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:text="@string/sessies"/>

</LinearLayout>

    <!-- Button Kalender -->



    <LinearLayout
        android:background="@drawable/selector_btn_kalender"
        android:layout_height="135dp" android:layout_width="135dp"
        android:id="@+id/ll_kalender" android:orientation="vertical"
        android:gravity="center"
        android:focusable="true"
        android:clickable="true"
        android:layout_margin="10dp">

    <ImageButton
        android:background="@android:color/transparent"
        android:layout_height="80dp"
        android:layout_width="match_parent"
        android:id="@+id/ib_kalender"
        android:scaleType="fitCenter"
        android:contentDescription="@string/kalender"
        android:layout_marginTop="20dp"
        android:clickable="false"
        android:tint="@android:color/white"
        android:src="@mipmap/kalender"
        android:padding="10dp"
        android:longClickable="false"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:text="@string/kalender"/>

</LinearLayout>

</TableRow>


    <TableRow
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:gravity="center_horizontal">

    <!-- Button Reminders -->



    <LinearLayout
        android:background="@drawable/selector_btn_reminders"
        android:layout_height="135dp"
        android:layout_width="135dp"
        android:id="@+id/ll_reminder"
        android:orientation="vertical"
        android:gravity="center"
        android:focusable="true"
        android:clickable="true"
        android:layout_margin="10dp">

    <ImageButton
        android:background="@android:color/transparent"
        android:layout_height="80dp"
        android:layout_width="match_parent"
        android:id="@+id/ib_reminders"
        android:scaleType="fitCenter"
        android:contentDescription="@string/reminder"
        android:layout_marginTop="20dp"
        android:clickable="false"
        android:tint="@android:color/white"
        android:src="@mipmap/reminders"
        android:padding="10dp"
        android:longClickable="false"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:text="@string/reminder"/>

</LinearLayout>

    <!-- Button Contact -->



    <LinearLayout
        android:background="@drawable/selector_btn_contact"
        android:layout_height="135dp"
        android:layout_width="135dp"
        android:id="@+id/ll_contact"
        android:orientation="vertical"
        android:gravity="center"
        android:focusable="true"
        android:clickable="true"
        android:layout_margin="10dp">

    <ImageButton
        android:background="@android:color/transparent"
        android:layout_height="80dp"
        android:layout_width="match_parent"
        android:id="@+id/ib_contact"
        android:scaleType="fitCenter"
        android:contentDescription="@string/contact"
        android:layout_marginTop="20dp"
        android:clickable="false"
        android:tint="@android:color/white"
        android:src="@mipmap/contact"
        android:padding="10dp"
        android:longClickable="false"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:text="@string/contact"/>

</LinearLayout>

</TableRow>

</TableLayout>

</LinearLayout>

    <FrameLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/fragment_holder_main"> </FrameLayout>

</android.support.constraint.ConstraintLayout>